--- a/style.css
+++ b/style.css
@@ -172,11 +172,11 @@ section {
   font-weight: 600;
 }
 
-.section_text_p1 {
+.section__text__p1 {
   text-align: center;
 }
 
-.section_text_p2 {
+.section__text__p2 {
   font-size: 1.75rem;
   margin-bottom: 1rem;
 }
